remove jquery as a dep. the linenums class can now be used to prevent wrapping of code in code sections

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -385,6 +385,11 @@ li li {
     margin: 0;
 }
 
+li.L0, li.L1, li.L2, li.L3,
+li.L5, li.L6, li.L7, li.L8 {
+  list-style-type: none !important
+}
+
 hr {
     display: block;
     height: 1px;
@@ -433,23 +438,40 @@ code, tt {
     font-family: "Inconsolata", monospace, sans-serif;
     font-size: 1.7rem;
     background-color: #efefef;
+    white-space: inherit !important;
     padding: 0 3px;
-    white-space: pre-wrap;
     -webkit-font-feature-settings: "liga" 0;
     -moz-font-feature-settings: "liga" 0;
     font-feature-settings: "liga" 0;
 }
 
+code ol {
+  list-style-type: none !important;
+  padding: 0 !important;
+}
+
+code li {
+  margin: 0;
+  background: white !important;
+}
+
 pre {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    width: 100%;
     font-family: "Inconsolata", monospace, sans-serif;
     font-size: 1.5rem;
-    white-space: pre;
     line-height: 1.4;
     margin: 0 0 2.1em;
-    overflow: auto;
+    overflowX: scroll;
+    /* max-width: 126%; */
+    /* width: 126%; */
+    /* padding: 15px 20px; */
+    /* background-color: white; */
+    /* box-shadow: 0 1px 2px rgba(0,0,0,0.3); */
+    /* left: 50%; */
+    /* position: relative; */
+    /* transform: translateX(-50%); */
+    /* border-radius: 2px; */
 }
 
 pre code, pre tt {
